# Shader-Art

./: .gitignore  CMakeLists.txt  README.md  Shader.h  main.cpp
Resources/Shaders/: Simple.fs  Simple.vs
